<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/_90"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/bg_story"
        android:layout_width="@dimen/_67"
        android:layout_height="@dimen/_67"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bgstory_ig"
        android:contentDescription="@string/background" />

    <ImageView
        android:id="@+id/iv_sg"
        android:layout_width="@dimen/_63"
        android:layout_height="@dimen/_63"
        app:layout_constraintBottom_toBottomOf="@+id/bg_story"
        app:layout_constraintEnd_toEndOf="@+id/bg_story"
        app:layout_constraintStart_toStartOf="@+id/bg_story"
        app:layout_constraintTop_toTopOf="@+id/bg_story"
        app:srcCompat="@drawable/sg1_ig"
        android:contentDescription="@string/photo" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5"
        android:layout_marginEnd="@dimen/_5"
        android:text="@string/usernames"
        android:textColor="#3E3E3E"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="@+id/bg_story"
        app:layout_constraintStart_toStartOf="@+id/bg_story"
        app:layout_constraintTop_toBottomOf="@+id/bg_story" />
</androidx.constraintlayout.widget.ConstraintLayout>