<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="mainBinding"
            type="com.sitiaisyah.idn.finaltest.data.MainViewModel" />

        <variable
            name="header"
            type="android.graphics.drawable.Drawable" />

        <variable
            name="camera"
            type="android.graphics.drawable.Drawable" />

        <variable
            name="dm"
            type="android.graphics.drawable.Drawable" />

        <variable
            name="pp"
            type="android.graphics.drawable.Drawable" />

        <variable
            name="menu"
            type="android.graphics.drawable.Drawable" />

        <variable
            name="post"
            type="android.graphics.drawable.Drawable" />

        <variable
            name="comment"
            type="android.graphics.drawable.Drawable" />

        <variable
            name="share"
            type="android.graphics.drawable.Drawable" />

        <variable
            name="bookmark"
            type="android.graphics.drawable.Drawable" />

        <variable
            name="user"
            type="android.graphics.drawable.Drawable" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/bg_header"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#F7F7F7"
            android:contentDescription="@string/header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_camera"
            android:layout_width="@dimen/_25"
            android:layout_height="@dimen/_25"
            android:layout_marginStart="@dimen/_10"
            android:contentDescription="@string/header"
            android:src="@{camera}"
            app:layout_constraintBottom_toBottomOf="@+id/bg_header"
            app:layout_constraintStart_toStartOf="@+id/bg_header"
            app:layout_constraintTop_toTopOf="@+id/bg_header" />

        <TextView
            android:id="@+id/tv_instagram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10"
            android:layout_marginTop="@dimen/_11"
            android:fontFamily="@font/billabong"
            android:text="@string/font_instagram"
            android:textColor="#000000"
            android:textSize="@dimen/_28"
            app:layout_constraintStart_toEndOf="@+id/iv_camera"
            app:layout_constraintTop_toTopOf="@+id/bg_header" />

        <ImageView
            android:id="@+id/iv_dm"
            android:layout_width="@dimen/_33"
            android:layout_height="@dimen/_30"
            android:layout_marginEnd="@dimen/_10"
            android:contentDescription="@string/header"
            android:src="@{dm}"
            app:layout_constraintBottom_toBottomOf="@+id/iv_camera"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/iv_camera" />

        <!--    <ScrollView-->
        <!--        android:layout_width="match_parent"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        app:layout_constraintTop_toBottomOf="@+id/bg_header"-->
        <!--        tools:layout_editor_absoluteX="1dp"-->
        <!--        tools:ignore="ScrollViewCount">-->

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_sg"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_90"
            android:layout_marginStart="@dimen/_5"
            android:layout_marginEnd="@dimen/_5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bg_header" />

        <ImageView
            android:id="@+id/pp_ig"
            android:layout_width="@dimen/_35"
            android:layout_height="@dimen/_35"
            android:layout_marginStart="@dimen/_10"
            android:layout_marginTop="@dimen/_5"
            android:contentDescription="@string/body"
            android:src="@{pp}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_sg" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10"
            android:text="@string/username"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="@+id/pp_ig"
            app:layout_constraintStart_toEndOf="@+id/pp_ig"
            app:layout_constraintTop_toTopOf="@+id/pp_ig" />

        <ImageView
            android:id="@+id/iv_menu"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_17"
            android:layout_marginEnd="@dimen/_10"
            android:contentDescription="@string/body"
            android:src="@{menu}"
            app:layout_constraintBottom_toBottomOf="@+id/pp_ig"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/pp_ig" />

        <ImageView
            android:id="@+id/iv_post"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_300"
            android:layout_marginTop="@dimen/_5"
            android:contentDescription="@string/post"
            android:scaleType="fitXY"
            android:src="@{post}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pp_ig" />

        <ImageView
            android:id="@+id/iv_like"
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_marginStart="@dimen/_10"
            android:layout_marginTop="@dimen/_10"
            android:contentDescription="@string/like"
            android:onClick="@{()-> mainBinding.onLike()}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_post"
            app:popularityIcon="@{mainBinding.popularity}" />

        <ImageView
            android:id="@+id/iv_comment"
            android:layout_width="@dimen/_25"
            android:layout_height="@dimen/_25"
            android:layout_marginStart="@dimen/_15"
            android:contentDescription="@string/comment"
            android:src="@{comment}"
            app:layout_constraintStart_toEndOf="@+id/iv_like"
            app:layout_constraintTop_toTopOf="@+id/iv_like" />

        <ImageView
            android:id="@+id/iv_send"
            android:layout_width="@dimen/_28"
            android:layout_height="@dimen/_28"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/send"
            android:src="@{share}"
            app:layout_constraintStart_toEndOf="@+id/iv_comment"
            app:layout_constraintTop_toTopOf="@+id/iv_like" />

        <ImageView
            android:id="@+id/iv_bookmark"
            android:layout_width="@dimen/_25"
            android:layout_height="@dimen/_25"
            android:layout_marginTop="@dimen/_10"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/bookmark"
            android:src="@{bookmark}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_post" />

        <TextView
            android:id="@+id/tv_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10"
            android:text="@string/username"
            android:textColor="#000000"
            app:layout_constraintStart_toStartOf="@+id/iv_like"
            app:layout_constraintTop_toBottomOf="@+id/iv_like" />

        <TextView
            android:id="@+id/tv_desc1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5"
            android:text="@string/description"
            android:textColor="#4E4E4E"
            app:layout_constraintStart_toEndOf="@+id/tv_user"
            app:layout_constraintTop_toTopOf="@+id/tv_user" />

        <TextView
            android:id="@+id/tv_desc2"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:text="@string/description2"
            app:layout_constraintStart_toStartOf="@+id/tv_user"
            app:layout_constraintTop_toBottomOf="@+id/tv_user" />

        <ImageView
            android:id="@+id/iv_user2"
            android:layout_width="@dimen/_30"
            android:layout_height="@dimen/_30"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/username"
            android:src="@{user}"
            app:layout_constraintStart_toStartOf="@+id/tv_user"
            app:layout_constraintTop_toBottomOf="@+id/tv_desc2" />

<!--        <FrameLayout-->
<!--            android:id="@+id/fm_main"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:background="@android:color/white"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/iv_user2">-->

<!--        </FrameLayout>-->

        <EditText
            android:id="@+id/et_comment"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_3"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="@dimen/_14"
            android:hint="@string/add_comment"
            app:layout_constraintStart_toEndOf="@+id/iv_user2"
            app:layout_constraintTop_toTopOf="@+id/iv_user2"
            android:autofillHints="@string/add_comment" />

        <TextView
            android:id="@+id/tv_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5"
            android:text="@string/post"
            android:textColor="@android:color/holo_blue_dark"
            app:layout_constraintBottom_toBottomOf="@+id/et_comment"
            app:layout_constraintStart_toEndOf="@+id/et_comment"
            app:layout_constraintTop_toTopOf="@+id/et_comment" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_comment"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            app:layout_constraintStart_toStartOf="@+id/iv_user2"
            app:layout_constraintTop_toBottomOf="@+id/iv_user2" />

        <!--    </ScrollView>-->


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
